updated output comments in the demos