@@ -122,6 +122,8 @@ public class EmptyStream_02_GenericStreamFromList {
 ############################################################
 list=[]
 ############################################################
+# WARNING: Unable to get Instrumentation. Dynamic Attach failed. You may add this JAR as -javaagent manually, or supply -Djdk.attach.allowAttachSelf
+# WARNING: Unable to attach Serviceability Agent. sun.jvm.hotspot.memory.Universe.getNarrowOopBase()
 eagerBuildEmpty:
 totalSize=88 bytes
 totalCount=2 objects
